# FanLang

./: .gitignore  404.html  BLOG-01-why-capability-menu.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  publish.bat  publish.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
PAPER-01-organizational-morphology-for-ai-agents/: index.html
PAPER-02-seminar-hall-architecture/: index.html
about/: index.html
blog/capability-menu/: index.html
blog/ooda-vs-langchain/: index.html
components/langchain/: index.html
components/rag/: index.html
components/seminar/: index.html
components/streamlit/: index.html
docs/: PAPER-01-organizational-morphology-for-ai-agents.md  PAPER-02-seminar-hall-architecture.md  about.md  index.md  pricing.md
docs/blog/: ooda-vs-langchain.md
docs/components/: langchain.md  rag.md  seminar.md  streamlit.md
docs/getting-started/: installation.md  ooda.md  quickstart.md  symbols.md
docs/guide/: context.md  decisions.md  govern.md  roadmap.md
examples/: 01_basic_symbols.py  02_ooda_chat.py  03_terminal_chat.py  04_seminar_demo.py  05_rag_demo.py
fanlang/: README.md  __init__.py  ooda.py  pyproject.toml  rag.py  seminar.py
fanlang-langchain/: README.md  __init__.py  pyproject.toml
fanlang-streamlit/: README.md  pyproject.toml
fanlang-streamlit/fanlang_streamlit/: __init__.py  callbacks.py  components.py
fanlang/src/fanlang/: ooda.py  seminar.py  symbols.py  terminology.py  wolfpack.py
fanlang_langchain/: README.md  ooda_agent.py  pyproject.toml
fanlang_langchain/fanlang_langchain/: retriever.py
fanlang_streamlit/: styles.py
getting-started/installation/: index.html
getting-started/ooda/: index.html
getting-started/quickstart/: index.html
getting-started/symbols/: index.html
guide/: CONTEXT.md  PATTERNS.md  ROADMAP.md  SCENARIOS.md
guide/context/: index.html
guide/decisions/: index.html
guide/govern/: index.html
guide/patterns/: index.html
guide/roadmap/: index.html
guide/scenarios/: index.html
legacy/ebook-rag/: OPEN_SOURCE_PLAN.md  config.py  index_books.bat  start_menu.bat  start_scaffold.bat  start_symbol_browser.bat  start_wolf_pack.bat  stats.bat  使用说明.txt
legacy/ebook-rag/app/: agent_demo.py  ai_symbols.py  category_analysis.py  chinese_ai_lang.py  indexer.py  processors.py  rag.py  (+4 more)
legacy/zhongwen/: ARCHITECTURE.md  install.bat  install.sh  start.bat  start.sh
papers/paper-01/: index.html
papers/paper-02/: index.html
pricing/: index.html
search/: search_index.json
tests/: conftest.py  test_langchain_ooda.py  test_langchain_retriever.py  test_ooda.py  test_seminar.py  test_streamlit_callbacks.py  test_streamlit_components.py  test_streamlit_styles.py  test_symbols.py  test_terminology.py  test_wolfpack.py
(+7 files in other folders)
