[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fanlang-streamlit"
version = "0.1.0"
description = "FanLang — Streamlit integration. Pre-built symbol bar and interaction components."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["streamlit>=1.28", "fanlang>=0.1.0"]
