[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfanlang-streamlit"
version = "0.1.0"
description = "FanLang — Streamlit integration. Pre-built symbol bar and interaction components."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["streamlit>=1.28", "pyfanlang>=0.1.0"]

[tool.setuptools]
packages = {find = {include = ["fanlang_streamlit", "fanlang_streamlit.*"]}}
