[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfanlang"
version = "0.1.0"
description = "FanLang -- AI interaction in Chinese characters. A UI/interaction layer for open-source AI projects."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4",
    "langchain-text-splitters>=0.2",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
]
full = [
    "fanlang[rag]",
]

[tool.setuptools.packages.find]
include = ["fanlang*"]
