[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfanlang-langchain"
version = "0.1.0"
description = "FanLang — LangChain integration. OODA Agent and FanLang Retriever for LangChain apps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["langchain>=0.2", "pyfanlang>=0.1.0"]

[project.optional-dependencies]
rag = ["pyfanlang[rag]"]

[tool.setuptools]
packages = {find = {include = ["fanlang_langchain", "fanlang_langchain.*"]}}
